--- a/UnityAdapter/UnityAdapter.csproj
+++ b/UnityAdapter/UnityAdapter.csproj
@@ -11,11 +11,11 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnityAdapter</RootNamespace>
-    <AssemblyName>Xamarin.Android.GoogleAdsMediation.UnityAdapter</AssemblyName>
+    <AssemblyName>UnityAdapter</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
-    <AndroidClassParser>jar2xml</AndroidClassParser>
+    <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
@@ -57,7 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.UnityAdsSdk">
-      <Version>3.1.0</Version>
+      <Version>3.1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Ads">
       <Version>71.1720.1</Version>
